--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="the_before_minute">分钟前</string>
     <string name="today">今天</string>
     <string name="yesterday">昨天</string>
+
+    
+    <string name="transition_cover" translatable="false">cover</string>
+    <string name="transition_background" translatable="false">background</string>
 </resources>
